# icu-demos

c/: .gitignore  Makefile.in  README.md  acinclude.m4  assertok.h  bldicures.py  configure.ac  hellomsg.cpp  hellores.cpp  icuhello.cpp  icuhelloworld.cpp
c/res/hellores/: es.txt  root.txt
icu-kube/docker.d/icu4c-demos/: Dockerfile
iucsamples/j/icu2work/src/main/java/com/ibm/us/srloomis/demo/icu2work/: CollateMessage.java
iucsamples/j/icu2work/src/main/resources/com/ibm/us/srloomis/demo/icu2work/: GoodMessage_es.properties
